--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,8 @@
-body
-{
+body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #121212;
-  color: #fafafa;
+  background-color: #feda77; /* Amarelo claro para dar leveza */
+  color: #333;
 }
