--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -12,8 +12,9 @@
 }
 #search-form svg{
     position: absolute;
-    top: 10px;
+    top: 8px;
     left: 10px;
+    color: black;
 }
 #search-form input{
     width: 100%;
