--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,84 @@ body {
   background-color: #feda77; /* Amarelo claro para dar leveza */
   color: #333;
 }
+a {
+  text-decoration: none;
+  color: #fafafa;
+}
+.active {
+  font-weight: bold;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+form {
+  display: flex;
+  flex-direction: column;
+}
+form input:-webkit-autofill,
+form input:-webkit-autofill:hover,
+form input:-webkit-autofill:focus,
+form input:-webkit-autofill:active {
+  background: transparent !important;
+  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+  box-shadow: 0 0 0 1000px transparent inset !important;
+  color: #333 !important; /* Garante que o texto fique visível */
+}
+
+/* Para navegadores que não suportam `-webkit-autofill` */
+form input:-internal-autofill-selected {
+  background: transparent !important;
+}
+label {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+label span {
+  font-weight: bold;
+  margin-bottom: .5em;
+  color: #aaa;
+  font-size: .7em;
+}
+input {
+  padding: .5em;
+  margin-bottom: 1em;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  outline: none;
+}
+input::placeholder {
+  color: #410303;
+}
+.btn,
+button,
+input[type="submit"] {
+  background-color: #515bd4;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 8px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 1em;
+  opacity: .8;
+}
+input[type="submit"] {
+  margin-top: 1em;
+}
+input:disabled{
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+}
+button:hover,
+input[type="submit"]:hover {
+  opacity: 1;
+}
+.cancel-btn {
+  background-color: #ccc;
+}
+.hide {
+  display: none;
+}
