--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #feda77; /* Amarelo claro para dar leveza */
+  background-color: #f3f0f1; /* Amarelo claro para dar leveza */
   color: #333;
 }
 a {
